Bugfix: photos were not showing in obs modal on identify if there were sounds

--- a/app/assets/stylesheets/shared/observations_grid_item.scss
+++ b/app/assets/stylesheets/shared/observations_grid_item.scss
@@ -295,6 +295,11 @@ $flowedDim: 150px;
   .photo-count {
     background-color: rgba(0,0,0,0.5);
   }
+  .photo.sound {
+    .sound-icon {
+      display: none;
+    }
+  }
   .all-photos-preview {
     display: flex;
   }
